Fixed crash when editing descriptions and pressing the edit button

--- a/Device Interface Manager/Views/ProfileCreatorView.xaml
+++ b/Device Interface Manager/Views/ProfileCreatorView.xaml
@@ -582,6 +582,7 @@
                 <DockPanel HorizontalAlignment="Left">
 
                     <DataGrid
+                    x:Name="myDataGrid"
                     Margin="0,0,0,40"
                     DockPanel.Dock="Top"
                     CanUserDeleteRows="False"
@@ -633,7 +634,8 @@
                                     <DataTemplate>
                                         <Button
                                         Command="{Binding DataContext.EditInputOutputCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}, Mode=FindAncestor}}" 
-                                        CommandParameter="{Binding}" Cursor="Hand">
+                                        CommandParameter="{Binding}" Cursor="Hand"
+                                        Click="Button_Click">
                                             <Viewbox Width="24" Height="24">
                                                 <Canvas Height="24" Width="24">
                                                     <Path  Fill="White" Data="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"/>
